--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Nocoport</title>
+  <title>Numbered Company Inc.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta property="og:title" content="Numbered Company Inc." />
+  <meta property="og:description" content="Numbered Company Inc. - A Toronto-based, queer-owned industrial design studio specializing in metal fabrication and retail merchandising." />
+  <meta property="og:image" content="https://www.no-co.ca/assets/prince.jpg" />
+  <meta property="og:url" content="https://www.no-co.ca" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Numbered Company Inc." />
+  <meta name="twitter:description" content="Numbered Company Inc. - A Toronto-based, queer-owned industrial design studio specializing in metal fabrication and retail merchandising." />
+  <meta name="twitter:image" content="https://www.no-co.ca/assets/prince.jpg" />
 </head>
 
 <body>
@@ -17,4 +26,3 @@
 </body>
 
 </html>
-
